[gd_scene load_steps=8 format=3 uid="uid://cb5gliljc7emy"]

[ext_resource type="Script" uid="uid://kko6gsjrrqm3" path="res://scripts/Room01.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://qi1wbihfece" path="res://assets/background/room01.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b8y8qyy4x4x4x" path="res://scenes/Door.tscn" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_top"]
size = Vector2(1544, 125.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bottom"]
size = Vector2(1395.06, 195.989)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(58.6589, 729.903)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(127.375, 767.75)

[node name="Room01" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundRect" type="ColorRect" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
position = Vector2(640, 360)
scale = Vector2(8, 8)
texture = ExtResource("2")

[node name="WallCollisions" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(640, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/TopWall"]
position = Vector2(1, -64.375)
shape = SubResource("RectangleShape2D_top")

[node name="BottomWall" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(640, 745)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/BottomWall"]
position = Vector2(2.44397, 63.5175)
scale = Vector2(1.09896, -0.617203)
shape = SubResource("RectangleShape2D_bottom")

[node name="LeftWall" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(-25, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/LeftWall"]
position = Vector2(-40.9999, -1.24985)
rotation = 3.14159
scale = Vector2(2.18207, -1.05562)
shape = SubResource("RectangleShape2D_left")

[node name="RightWall" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(1305, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/RightWall"]
position = Vector2(39.3125, 1.125)
shape = SubResource("RectangleShape2D_right")

[node name="Enemies" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Exits" type="Node2D" parent="."]

[node name="TopDoor" parent="Exits" instance=ExtResource("3")]
position = Vector2(644, -89)
direction = 1

[node name="BottomDoor" parent="Exits" instance=ExtResource("3")]
position = Vector2(640, 808)

[node name="LeftDoor" parent="Exits" instance=ExtResource("3")]
position = Vector2(-64, 361)
direction = 2

[node name="RightDoor" parent="Exits" instance=ExtResource("3")]
position = Vector2(1343, 359)
direction = 3
